fix padding issue on mobile for lobby list

--- a/src/components/Lobby/LobbyManager/LobbyManager.css
+++ b/src/components/Lobby/LobbyManager/LobbyManager.css
@@ -11,6 +11,7 @@
   margin: 0 60px;
 
   @media (max-width: 600px) {
+    padding-top: 40px;
     margin: 0;
   }
 }
